minor refactor of NexusScanFileManager.addGlobalMetadataDevices
change if block to guard clause.
partitioningBy never creates a null List, so change null test to
isEmpty test

Change-Id: I4b6f63c48aee46b7d323505e4f39e1675a799c95